# adl-lsp

./: CLAUDE.md  COMPLETION_IMPLEMENTATION.md  LICENSE  README.md  completion_test_example.adl
.claude/: settings.local.json
.github/workflows/: build-release.yml
rust/adl-lsp/: Cargo.toml  README.md  rust-toolchain.toml
rust/adl-lsp/sample/: simple.adl
rust/adl-lsp/src/: cli.rs  main.rs  node.rs
rust/adl-lsp/src/node/: kind.rs  mod.rs
rust/adl-lsp/src/parser/: definition.rs  diagnostics.rs  hover.rs  mod.rs  references.rs  symbols.rs  tree.rs  ts_lsp_interop.rs
rust/adl-lsp/src/parser/input/: error.adl  hover.adl  importerror.adl  message.adl  missing_semicolons.adl
rust/adl-lsp/src/parser/snapshots/: adl_lsp__parser__definition__test__Content.snap  adl_lsp__parser__definition__test__Message.snap  adl_lsp__parser__definition__test__String.snap  adl_lsp__parser__definition__test__common.string.StringNE.snap  adl_lsp__parser__definition__test__definition-2.snap  adl_lsp__parser__definition__test__definition-3.snap  adl_lsp__parser__definition__test__definition-4.snap  adl_lsp__parser__definition__test__definition-5.snap  adl_lsp__parser__definition__test__definition.snap  adl_lsp__parser__definition__test__definition.snap.new  adl_lsp__parser__diagnostics__test__collect_import_error.snap  adl_lsp__parser__diagnostics__test__collect_missing_semicolon_error.snap  adl_lsp__parser__diagnostics__test__collect_parse_error.snap  adl_lsp__parser__diagnostics__test__collect_parse_error.snap.new  adl_lsp__parser__hover__test__hover-2.snap  adl_lsp__parser__hover__test__hover-3.snap  adl_lsp__parser__hover__test__hover.snap  adl_lsp__parser__hover__test__hover.snap.new  adl_lsp__parser__references__test__references-2.snap  adl_lsp__parser__references__test__references-3.snap  adl_lsp__parser__references__test__references-4.snap  adl_lsp__parser__references__test__references-5.snap  adl_lsp__parser__references__test__references.snap
rust/adl-lsp/src/server/: config.rs  imports.rs  mod.rs  modules.rs  packages.rs  state.rs
rust/adl-lsp/src/server/imports/: fqn.rs  mod.rs
ts/adl-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json
(+5 files in other folders)
